--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;1,700&family=Inter:wght@300;500&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 930px)">
+    ./
+
     <title>Document</title>
 </head>
 
@@ -60,7 +63,33 @@
                         <p><b>Actualizado:</b> 19 de Julio 23:45</p>
                     </div>
                 </div>
-                <div></div>
+                <div class="main-comisions-table">
+                    <p class="comisions-table--title">Comisiones</p>
+                    <!-- Contenedor de Segunda Tabla -->
+                    <div class="comisions-table--container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitrade</td>
+                                <td class="table__top-right table__right">$12.96 </td>
+                            </tr>
+                            <tr>
+                                <td>Bitpreco</td>
+                                <td class="table__right">$13.07 </td>
+                            </tr>
+                            <tr>
+                                <td>Novadax</td>
+                                <td class="table__right">$13.15 </td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Coinext</td>
+                                <td class="table__bottom-right table__right">$14.96 </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency-table--date2">
+                        <p><b>Actualizado:</b> 19 de Julio 23:45</p>
+                    </div>
+                </div>
             </section>
         </section>
         <!-- BENEFITS SECTION  -->
@@ -80,24 +109,78 @@
                 <article class="product-detail--card">
                     <span class="icon-card eye"></span>
                     <p class="product--card-tile">No hay tasas escondidas</p>
-                    <p class="product--card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                    <p class="product--card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el
+                        costo real de lo que estás adquiriendo.</p>
                 </article>
                 <article class="product-detail--card">
                     <span class="icon-card dollar"></span>
                     <p class="product--card-tile">Compara monedas</p>
-                    <p class="product--card-body">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
+                    <p class="product--card-body">No más rumores, con Babtabit sabrás el valor real de cada moneda en el
+                        mercado actual.</p>
                 </article>
                 <article class="product-detail--card">
                     <span class="icon-card check"></span>
                     <p class="product--card-tile">Información confiable</p>
-                    <p class="product--card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+                    <p class="product--card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su
+                        contenido mientras se actualizan.</p>
                 </article>
             </section>
         </section>
-        <section></section>
-        <section></section>
+        <section class="bitcoin-img-container">
+            <h2>Conocelo hoy.</h2>
+        </section>
+        <!-- PLANS SECTION -->
+        <section id="plans" class="main-plans-container">
+            <div class="plans--title">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+
+            <section class="plans-container--slider">
+                <article class="plans-container--card">
+                    <p class="recomendado">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"><span>$</span> 99</p>
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--call">Escoger Este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <p class="recomendado">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"><span>$</span> 99</p>
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--call">Escoger Este<span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <p class="recomendado">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"><span>$</span> 99</p>
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--call">Escoger Este<span></span></button>
+                    </div>
+                </article>
+            </section>
+
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="left-footer" >
+            <ul>
+                <li><a href="#">LinkedIn</a></li>
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
+            </ul>
+        </section>
+        <section class="right-footer">
+            <img src="./assets/imgs/logo-footer.svg" alt="Logo de Batatabit 2020">
+            <p></p>
+        </section>
+    </footer>
 </body>
 
 </html>
